[package]
name = "redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
redis = "0.22.1"
pretty_env_logger = "0.4.0"
log = "0.4.17"
tokio-util = {version = "0.7.4", features = ["codec"]}
bytes = "1.3.0"
futures = "0.3.25"
atoi = "2.0.0"
